@@ -84,7 +84,7 @@ To display the available targets type:
     <property name="project"            value="batik"/>
     <property name="year"               value="2007"/>
     <property name="version"            value="1.7"/>
-    <property name="revisionType"       value=""/>
+    <property name="revisionType"       value="pre"/>
     <property name="revisionNumber"     value=""/>
     <property name="completeVersion"    value="${version}${revisionType}${revisionNumber}"/>
   
