@@ -16,7 +16,7 @@ Bug fixing is an on-going task, so it is implied in all sub-releases.
     42543, 42645, 42651, 42697, 42698, 42807, 42961, 42963, 42968,
     43022, 43043, 43045, 43165, 43194, 43195, 43370, 43418, 43446,
     43638, 43657, 43744, 43760, 43764, 43787, 43854, 43871, 43904,
-    43953, 44029, 44054, 44092
+    43953, 44029, 44054, 44092, 44146
 
 2. New features
 
@@ -105,6 +105,7 @@ Bug fixing is an on-going task, so it is implied in all sub-releases.
   * Fixed bug in CSS class name matching, which occured only when an
     element was declared to be a member of multiple classes, where one
     is a prefix of another.
+  * Fixed bug on OS X where the zoom interactor overlay was not shown.
 
 5. Misc
 
